# semiautodoc

./: example.md
presentation/: semiautodoc-presentation.tex
semiautodoc/: edit-text-delegate.h  model-widget.cpp  model-widget.h  model.cpp  model.hpp  parser.cpp  parser.hpp  remove-button-delegate.cpp  remove-button-delegate.h  semiautodoc  semiautodoc.pro  tree-item.cpp  tree-item.h  tree-model.cpp  tree-model.h  widget.cpp  widget.h
semiautodoc/gui/include/: model-widget.h  tree-model.h
semiautodoc/gui/src/: edit-text-delegate.cpp  model-widget.cpp  widget.cpp
semiautodoc/parser/: CMakeLists.txt  build_script.sh
semiautodoc/parser/include/: class.hpp  element.hpp  function.hpp  model.hpp
semiautodoc/parser/parser/include/: element.hpp  parser.hpp
semiautodoc/parser/parser/src/: class.cpp  element.cpp  function.cpp  parser.cpp
semiautodoc/parser/src/: class.cpp  function.cpp  parser.cpp
semiautodoc/parser/test/: CMakeLists.txt  test-class-declaration.cpp  test-class-getcontent.cpp  test-parser.cpp
semiautodoc/parser/test/unit-tests/: test-class-getcontent.cpp  test-element.cpp  test-function-declaration.cpp  test-function-getcontent.cpp
